# pixelpress

./: .dockerignore  .gitignore  AGENTS.md  AI自动排版系统设计方案-v2.md  README.md  compose.prod.yml  compose.test.yml  docker-compose.yml  layout-dsl.md  nginx.conf  start.bat  开发分工计划.md  算法优化与固定测评集推进计划.md  节点一开发文件2026_6_7.md  节点四开发文件(1).md  需求文档.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260704_000001_initial_task_a_schema.py  20260704_000002_add_ai_and_print_metadata.py  20260704_000003_add_projects_and_ai_config.py  20260706_000004_async_task_runtime.py  20260707_000002_add_photo_capture_metadata.py  20260715_000004_default_ai_config_and_single_project.py  20260715_000005_stage_b_photo_cleaning.py  20260716_000006_stage_c_chapter_clustering.py  20260717_000007_stage_c_semantic_features.py  20260717_000008_stage_c_hierarchical_events.py  20260717_000009_theme_curation.py  20260718_000010_theme_constraints.py  20260718_000011_cross_modal_theme_relevance.py  (+5 more)
backend/app/: main.py
backend/db/: init.sql
backend/docs/: chapter-clustering-dev-guide.md  postgresql-migration-plan.md  节点三开发文件.md
backend/scripts/: cleaning_evaluation_manifest.example.jsonl  create_admin.py  evaluate_chapter_clustering.py  evaluate_cleaning.py  evaluate_theme_relevance.py  fetch_cleaning_models.py  migrate_local_photos_to_minio.py  run_dev_server.py
backend/tests/: conftest.py  test_app.py  test_story_planner_config.py
(+289 files in other folders)
